--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Results Summary Component</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div id="cursor"></div>
 
+    <main class="card" id="mainCard">
+      <section class="result" id="resultSection">
+        <h2>Your Result</h2>
+        <div class="score-circle" id="scoreCircle">
+          <span id="score">0</span>
+          <p>of 100</p>
+        </div>
+        <h1>Great</h1>
+        <p class="desc">
+          You scored higher than 65% of the people who have taken these tests.
+        </p>
+      </section>
+
+      <section class="summary">
+        <h2>Summary</h2>
+        <div id="categories"></div>
+        <button id="continue-btn">Continue</button>
+      </section>
+    </main>
+
+    <script src="script.js"></script>
+  </body>
+</html>
